--- a/app/views/shared/_brand_log_in_sign_up_form.html.erb
+++ b/app/views/shared/_brand_log_in_sign_up_form.html.erb
@@ -45,7 +45,7 @@
 
       </br>
 
-      <div>Are you an Influencer, please login <a href="<%= influencer_home_public_index_path(sign_in_modal: true)%>">here</a>.</div>
+      <div>Are you an Influencer, please login <a href="<%= influencer_home_public_index_path(sign_in_modal: true)%>"><span class="here-underline">here</span></a>.</div>
     </div>
 
 
@@ -89,7 +89,7 @@
 
           </br>
 
-          <div>Are you an Influencer, please Sign up <a href="<%= influencer_home_public_index_path(sign_up_modal: true)%>">here</a>.</div>
+          <div>Are you an Influencer, please Sign up <a href="<%= influencer_home_public_index_path(sign_up_modal: true)%>"><span class="here-underline">here</span></a>.</div>
         </div>
       </div>
     </div>
