- Brand payment and campaign XLS file: data Shown in different column in Windows machine - Influencer payment and campaign XLS file: data Shown in different column in Windows machine

--- a/app/views/campaigns/export_brand_campaigns.xls.erb
+++ b/app/views/campaigns/export_brand_campaigns.xls.erb
@@ -1,5 +1,5 @@
 <%- headers = ['Campaign Name', 'Post Likes', 'Reach', 'Comments', 'Shares', 'Campaign Starts', 'Start time', 'Campaign Ends', 'End time'] -%>
-<%= CSV.generate_line headers %>
+<%= CSV.generate_line(headers, col_sep: "\t") %>
 <% @campaigns.each do |campaign| %>
-    <%= CSV.generate_line([campaign.name, campaign.number_of_likes, campaign.number_of_post_reach, campaign.number_of_comments, campaign.number_of_shares, campaign.get_start_date, campaign.get_start_time, campaign.get_end_date, campaign.get_end_time]).html_safe.strip %>
+    <%= CSV.generate_line([campaign.name, campaign.number_of_likes, campaign.number_of_post_reach, campaign.number_of_comments, campaign.number_of_shares, campaign.get_start_date, campaign.get_start_time, campaign.get_end_date, campaign.get_end_time], col_sep: "\t" ).html_safe -%>
 <% end %>
