--- a/app/views/payments/export_brand_payments.xls.erb
+++ b/app/views/payments/export_brand_payments.xls.erb
@@ -1,5 +1,5 @@
 <%- headers = ['Campaign Name','Date Billed', 'Transaction ID', 'Amount Received(INR)', 'Payment Status'] -%>
-<%= CSV.generate_line headers %>
+<%= CSV.generate_line(headers, col_sep: "\t") %>
 <% @brand_payments.each do |payment| %>
-    <%= CSV.generate_line([payment.campaign.name, payment.billed_date.present? ? payment.billed_date.strftime('%B %d, %Y') : 'NA', sprintf('BP%05d', payment.id), payment.amount_billed, payment.status]).html_safe %>
+    <%= CSV.generate_line([payment.campaign.name, payment.billed_date.present? ? payment.billed_date.strftime('%B %d, %Y') : 'NA', sprintf('BP%05d', payment.id), payment.amount_billed, payment.status], col_sep: "\t").html_safe -%>
 <% end %>
