--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -207,7 +207,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .social-account-tab-content .chosen-container {
-    width: 33% !important;
+    width: calc(33% + 58px) !important;
 }
 
 /* ============== page responsive stylesheet ================= */
@@ -531,19 +531,19 @@ div.awesomplete > ul > li[aria-selected="true"] {
 
 @media (max-width: 992px) {
     .js-social-account-tab .chosen-container {
-        width: 70% !important;
+        width: calc(70% + 58px) !important;
     }
 }
 
 @media (max-width: 900px) {
     .js-social-account-tab .chosen-container {
-        width: 60% !important;
+        width: calc(60% + 58px) !important;
     }
 }
 
 @media (max-width: 768px) {
     .js-social-account-tab .chosen-container {
-        width: 34% !important;
+        width: calc(34% + 58px) !important;
     }
 
     .social-account-tabs label {
