--- a/app/assets/stylesheets/contact-us.css
+++ b/app/assets/stylesheets/contact-us.css
@@ -37,6 +37,10 @@
     font-size: 13px;
 }
 
+.get-in-touch-category .selectBox {
+    padding: 2px;
+}
+
 .get-in-touch-message {
     padding-top: 10px;
 
@@ -56,7 +60,7 @@
     display: inline-block;
 }
 
-@media  (max-width: 800px){
+@media  (max-width: 825px){
     .get-in-touch-form {
         padding-left: 50px;
 
@@ -65,6 +69,10 @@
     .category-list {
         width: 230px;
         font-size: 12px;
+    }
+
+    .get-in-touch-category .selectBox {
+        width: 230px !important;
     }
 
     .get-in-touch-message-textarea {
@@ -96,6 +104,10 @@
         display: block;
         width: 100%;
         font-size: 12px;
+    }
+
+    .get-in-touch-category .selectBox {
+        width: 100% !important;
     }
 
     .get-in-touch-submit {
