Brand campaign: Drop down arrow change

--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -23,6 +23,7 @@
 
 .brands-explore-advance-search .selectBox{
     width: 100% !important;
+    padding: 2px;
 }
 
 .brands-explore-advance-search label {
