Influencer > Profile > Social accounts information and pricing : Multiple Industry field show responsive after error

--- a/app/views/profile/_social_account_tabs.html.erb
+++ b/app/views/profile/_social_account_tabs.html.erb
@@ -61,4 +61,8 @@
     $(function(){
         fakewaffle.responsiveTabs(['xs', 'sm']);
     });
+
+    $(".chosen").chosen({
+        placeholder_text_multiple: 'Select Industry'
+    });
 </script>
