--- a/app/views/profile/_social_account_tabs.html.erb
+++ b/app/views/profile/_social_account_tabs.html.erb
@@ -22,32 +22,37 @@
             <div class="form-group">
               <div class="col-md-6 col-sm-12 col-xs-12">
                 <%= g.label :status_update_cost, 'Status Update' %>
-                <%= g.number_field :status_update_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR/day
+                <%= g.number_field :status_update_cost, 'data-parsley-required' => 'true', 'data-parsley-type' => 'number', 'data-parsley-min' => '0', 'data-parsley-errors-container' => "#status_update_cost_#{ g.object.id}" %> INR/day
+                <div id="status_update_cost_<%= g.object.id %>"></div>
               </div>
               <div class="col-md-6 col-sm-12 col-xs-12">
                 <%= g.label :cover_photo_cost, 'Cover Photo' %>
-                <%= g.number_field :cover_photo_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR/day
+                <%= g.number_field :cover_photo_cost, 'data-parsley-required' => 'true', 'data-parsley-type' => 'number', 'data-parsley-min' => '0', 'data-parsley-errors-container' => "#cover_photo_cost_#{ g.object.id}" %> INR/day
+                <div id="cover_photo_cost_<%= g.object.id %>"></div>
               </div>
             </div>
             <div class="form-group">
               <div class="col-md-6 col-sm-12 col-xs-12">
                 <%= g.label :profile_photo_cost, 'Profile Photo' %>
-                <%= g.number_field :profile_photo_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR/day
+                <%= g.number_field :profile_photo_cost, 'data-parsley-required' => 'true', 'data-parsley-type' => 'number', 'data-parsley-min' => '0', 'data-parsley-errors-container' => "#profile_photo_cost_#{ g.object.id}" %> INR/day
+                <div id="profile_photo_cost_<%= g.object.id %>"></div>
               </div>
               <div class="col-md-6 col-sm-12 col-xs-12">
                 <%= g.label :video_post_cost, 'Video Post' %>
-                <%= g.number_field :video_post_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR/day
+                <%= g.number_field :video_post_cost, 'data-parsley-required' => 'true', 'data-parsley-type' => 'number', 'data-parsley-min' => '0', 'data-parsley-errors-container' => "#video_post_cost_#{ g.object.id}" %> INR/day
+                <div id="video_post_cost_<%= g.object.id %>"></div>
               </div>
             </div>
             <div class="form-group">
               <div class="col-md-6 col-sm-12 col-xs-12">
                 <%= g.label :photo_post_cost, 'Photo Post' %>
-                <%= g.number_field :photo_post_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR/day
+                <%= g.number_field :photo_post_cost, 'data-parsley-required' => 'true', 'data-parsley-type' => 'number', 'data-parsley-min' => '0', 'data-parsley-errors-container' => "#photo_post_cost_#{ g.object.id}" %> INR/day
+                <div id="photo_post_cost_<%= g.object.id %>"></div>
               </div>
               <div class="col-md-6 col-sm-12 col-xs-12">
-                  <%= g.label :category, 'Industry', class: 'industry-label' %>
-                  <%= g.collection_select :category, Category.all.order(:name), :id, :name, { selected: g.object.try(:categories).present? ? g.object.try(:categories).try(:map, &:id) : [] }, { class: 'chosen influencer-industry js-skip-select-box', multiple: true, 'data-parsley-required' => 'true', 'data-parsley-errors-container' => '.industry_field_error' }  %>
-                  <div class="industry_field_error"></div>
+                <%= g.label :category, 'Industry', class: 'industry-label' %>
+                <%= g.collection_select :category, Category.all.order(:name), :id, :name, { selected: g.object.try(:categories).present? ? g.object.try(:categories).try(:map, &:id) : [] }, { class: 'chosen influencer-industry js-skip-select-box', multiple: true, 'data-parsley-errors-container' => "#category_#{ g.object.id}" }  %>
+                <div id="category_<%= g.object.id %>"></div>
               </div>
             </div>
           </div>
