--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -16,7 +16,7 @@
   </div>
   <%= image_tag(@user.profile_picture(:thumb), :class => 'profile-picture center-block img-circle', :alt => 'profile-picture') %>
 
-  <%= form_for @user, url: profile_path(@user), data: { parsley_validate: '', parsley_excluded: 'input[type=number], .social-account-tab-content .influencer-industry, #user_country, #user_state' } , html: {class: 'form-horizontal personal-info-form', id: 'edit_user'} do |f| %>
+  <%= form_for @user, url: profile_path(@user), data: { parsley_validate: '', parsley_excluded: '    #user_country, #user_state' } , html: {class: 'form-horizontal personal-info-form', id: 'edit_user'} do |f| %>
 
       <div class="personal-info-without-fb">
 
