1. Brand > Explore > Card: width of card should be fixed up to responsive design. 2. Show cards in Stack in Responsive design

--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -441,3 +441,15 @@ only screen and (max-width: 768px){
 .vertical-align-middle {
     vertical-align: middle;
 }
+
+.search-result-item {
+    width: 25%;
+    display: inline-block;
+    min-width: 220px;
+}
+
+@media (max-width: 768px) {
+    .search-result-item {
+        width: 100%;
+    }
+}
