--- a/app/views/shared/_footer_other_page.erb
+++ b/app/views/shared/_footer_other_page.erb
@@ -4,7 +4,7 @@
     <div class="col-md-6 col-sm-6 col-xs-12 footer-info-padding">
       All Rights Reserved <span class="rights-reserved">&reg;</span> Brand Reach | Copyright <%= local_time(Time.now, '%Y') %>
     </div>
-    <div class="col-md-2 col-sm-2  col-xs-12 col-md-offset-4 col-sm-offset-4">
+    <div class="col-md-3 col-sm-3  col-xs-12 col-md-offset-3 col-sm-offset-3 footer-info-padding">
       <div class="fb-twitter">
         <a href="#">
           <i class="fa fa-lg fa-facebook"></i>
@@ -12,6 +12,14 @@
         <span class="space"></span>
         <a href="#">
           <i class="fa fa-lg fa-twitter"></i>
+        </a>
+        <span class="space"></span>
+        <a href="#">
+          <i class="fa fa-lg fa-linkedin"></i>
+        </a>
+        <span class="space"></span>
+        <a href="#">
+          <i class="fa fa-lg fa-google-plus"></i>
         </a>
       </div>
       <div class="clearfix"></div>
