--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -767,6 +767,10 @@ only screen and (max-width: 560px) {
     width: 52%;
 }
 
+.new-campaign-content .selectBox {
+    width: 52% !important;
+}
+
 .description-label{
     margin-top: 30px;
     vertical-align: top;
@@ -987,6 +991,9 @@ only screen and (max-width: 768px) {
         width: 100%;
     }
 
+    .new-campaign-content .selectBox {
+        width: 100% !important;
+    }
 }
 
 @media
