--- a/app/assets/stylesheets/brands-setting.css
+++ b/app/assets/stylesheets/brands-setting.css
@@ -160,9 +160,9 @@
     background-color: #666666;
     color: #FFFFFF;
     box-shadow: 0 0 1px #8b7a5c;
+    font-family: 'Raleway', sans-serif;
     font-weight: 500;
     font-size: 13px;
-
 }
 
 .btn-deactivate:hover {
