--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <%= stylesheet_link_tag 'sweetalert', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= javascript_include_tag 'sweetalert.min' %>
-  <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Raleway:500,600,700,100,200,300,400,800,900' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tag %>
   <!--handlebars message template-->
