--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -41,11 +41,11 @@
                              class: ''
               %>
 
-                <div>
-                  <%= select_tag 'price',
-                                 options_for_select(price_drop_down),
-                                 {id: 'explore-price', prompt: 'Choose a range', class: ''} %>
-                </div>
+              <div>
+                <%= select_tag 'price',
+                               options_for_select(price_drop_down),
+                               {id: 'explore-price', prompt: 'Choose a range', class: ''} %>
+              </div>
             </div>
 
             <div class="col-md-12">
@@ -84,6 +84,22 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $('select').selectBox();
+    });
+
+    $( window ).resize(function() {
+    // making search container horizontally center aligned
+        var containerWidth = $('#search-result-container').width();
+        var searchItemWidth = $('.search-result-item').width();
+        var innerContainerWidth = containerWidth - (containerWidth % 214);
+        if (containerWidth < 708 && containerWidth > 420)
+        {
+            $('.search-result').css('width', innerContainerWidth);
+        }
+
+        else
+        {
+            $('.search-result').css('width', 'auto');
+        }
     });
 
     // if there is any modal remains after one close
