remove company name uniqueness

--- a/app/views/admin/admins/_add_admin_modal.html.erb
+++ b/app/views/admin/admins/_add_admin_modal.html.erb
@@ -27,9 +27,13 @@
 
           <div class="input_container">
             <div class="label_l">Email</div>
-            <input data-parsley-id="6021" class="login_input" data-parsley-required="true"
-                   data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
-            <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
+            <input class="login_input"
+                   data-parsley-required="true"
+                   data-parsley-type="email"
+                   data-parsley-trigger="change"
+                   name="user[email]"
+                   id="user_email"
+                   type="text">
           </div>
           <div class="input_container">
             <div class="label_l">Password</div>
