change influencer amount withdraw alert messages according to bhanu's QA

--- a/app/views/influencer_payments/index.html.erb
+++ b/app/views/influencer_payments/index.html.erb
@@ -12,7 +12,7 @@
 
     <div class="amount-withdraw">
       <%= label_tag 'withdraw_amount', 'Amount to Withdraw' %>
-      <%= number_field_tag 'withdraw_amount', '' %>
+      <%= number_field_tag 'withdraw_amount', '', data:{ 'parsley-type' => 'number'} %>
       <%= button_tag 'WITHDRAW', :class => 'btn btn-withdraw button-border-yellow', id: 'btn-amount-withdraw' %>
     </div>
   </div>
