--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -60,6 +60,11 @@
                 <span class="space-sidebar">Active Influencers</span>
               </a>
             </li>
+            <li class="<%= current_path contact_us_admin_admins_path %>">
+              <a href="<%= contact_us_admin_admins_path %>">
+                <span class="space-sidebar">Contact Us</span>
+              </a>
+            </li>
             <li class="<%= current_path payment_request_admin_admins_path %>">
               <a href="<%= payment_request_admin_admins_path %>">
                 <span class="space-sidebar">Payments</span>
