- Contact us mail format change

--- a/app/views/campaign_mailer/contact_us_mail.html.erb
+++ b/app/views/campaign_mailer/contact_us_mail.html.erb
@@ -1,3 +1,7 @@
-<h4>Hi, Admin</h4>
-<P><%= @message %></P>
+<h4>Dear, Admin</h4>
+
+<p><strong>New Message From : </strong><%= @user.full_name %></p>
+<p><strong>Email Address : </strong><%= @user.email %></p>
+
+<P><strong>Message is : </strong></P><%= @message %>
 
