Problem solved: Field alert message are not displaying with invalid mail id entering in invite influencer popup

--- a/app/views/admin/invitations/_brand_invitation_form.html.erb
+++ b/app/views/admin/invitations/_brand_invitation_form.html.erb
@@ -21,13 +21,13 @@
 
               <div class="input_container">
                 <div class="label_l">First Name</div>
-                <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[first_name]" id="user_email" type="text">
+                <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-pattern="/^[A-Za-z\s]+$/" data-parsley-trigger="change" name="user[first_name]" id="user_email" type="text">
                 <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
               </div>
 
               <div class="input_container">
                 <div class="label_l">Last Name</div>
-                <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[last_name]" id="user_email" type="text">
+                <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-pattern="/^[A-Za-z\s]+$/" data-parsley-trigger="change" name="user[last_name]" id="user_email" type="text">
                 <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
               </div>
 
