--- a/app/views/admin/admins/_add_admin_modal.html.erb
+++ b/app/views/admin/admins/_add_admin_modal.html.erb
@@ -14,14 +14,14 @@
           <div class="input_container">
             <div class="label_l">First Name</div>
             <input data-parsley-id="6021" class="login_input" data-parsley-required="true"
-                   data-parsley-trigger="change" name="user[first_name]" id="user_email" type="text">
+                   data-parsley-trigger="change" data-parsley-pattern="/^[A-Za-z\s]+$/" name="user[first_name]" id="user_email" type="text">
             <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
           </div>
 
           <div class="input_container">
             <div class="label_l">Last Name</div>
             <input data-parsley-id="6021" class="login_input" data-parsley-required="true"
-                   data-parsley-trigger="change" name="user[last_name]" id="user_email" type="text">
+                   data-parsley-trigger="change" data-parsley-pattern="/^[A-Za-z\s]+$/" name="user[last_name]" id="user_email" type="text">
             <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
           </div>
 
