--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -41,11 +41,11 @@
       </p>
       <div class="socialmedia">
         <div class="fb-twitter">
-          <a href="#">
+          <a href="https://www.facebook.com/Thebrandreach-1706253322929246/">
             <i class="fa fa-lg fa-facebook"></i>
           </a>
           <span class="space"></span>
-          <a href="#">
+          <a href="https://twitter.com/BrandReach1">
             <i class="fa fa-lg fa-twitter"></i>
           </a>
           <span class="space"></span>
