--- a/app/views/shared/_footer_home_page.html.erb
+++ b/app/views/shared/_footer_home_page.html.erb
@@ -54,11 +54,11 @@
       </div>
       <div class="col-md-3 col-sm-3  col-xs-12 col-md-offset-3 col-sm-offset-3 footer-info-padding">
         <div class="fb-twitter">
-          <a href="#">
+          <a href="https://www.facebook.com/Thebrandreach-1706253322929246/">
             <i class="fa fa-lg fa-facebook"></i>
           </a>
           <span class="space"></span>
-          <a href="#">
+          <a href="https://twitter.com/BrandReach1">
             <i class="fa fa-lg fa-twitter"></i>
           </a>
           <span class="space"></span>
