Problem solved : Admin > brand invitation: Spelling mistake correction

--- a/app/views/admin/invitations/_brand_invitation_form.html.erb
+++ b/app/views/admin/invitations/_brand_invitation_form.html.erb
@@ -17,7 +17,7 @@
             </br>
             <form class="show-spinner-on-submit" id="ajax-signup" method="post" accept-charset="UTF-8" action="/invitations/create_brand_invitation" data-remote="true" data-parsley-validate="">
 
-              <p>Creat Brand </p>
+              <p>Create Brand </p>
 
               <div class="input_container">
                 <div class="label_l">First Name</div>
