Successful message shown for Get in Touch section in public page

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2137,3 +2137,8 @@ div.modal-content{
 .here-underline {
   text-decoration: underline;
 }
+
+.public-page-flash-message {
+  margin-bottom: -22px;
+  margin-top: 55px;
+}
