--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -106,7 +106,9 @@
     </nav>
   </div>
 </div>
-
+<div class="public-page-flash-message">
+    <%= render partial: 'shared/flash_messages', flash: flash unless flash[:notice].eql?('Signed out successfully.') %>
+</div>
 <%= yield %>
 
 <!-- partial rendering section -->
