Spelling correction of Received in payments section

--- a/app/views/influencer_payments/index.html.erb
+++ b/app/views/influencer_payments/index.html.erb
@@ -65,7 +65,7 @@
             <th class="squaredFour" id="select_all_influencer_payment"><input type="checkbox" class="payment-header" value="all"/></th>
             <th>Date Billed</th>
             <th>Transaction ID</th>
-            <th>Amount Recieved (INR)</th>
+            <th>Amount Received (INR)</th>
             <th>Payment Status</th>
           </tr>
           </thead>
